Code Cleanup: Apply http://imagej.net/Coding_style
(Using lambda expression where possible)